--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@hookform/resolvers": "^3.3.3",
     "axios": "^1.6.7",
     "fecha": "^4.2.3",
+    "lucide-react": "^0.378.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-feather": "^2.0.10",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.22.1",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.4",
